replace Arrays.asList() to List.of()